# game-playground

./: .gitignore  CMakeLists.txt  GOALS.md  README.md  state.hpp
cmake_modules/: FindCEGUI.cmake
export_m42/: export_m42.py  format-description.txt  untitled.m42
resources/: README.md
resources/gui/layouts/: HUD.layout
resources/maps/: testMap.tga
resources/materials/: blackcloth.m42mat  cornea.m42mat  debugBlue.m42mat  debugGreen.m42mat  debugRed.m42mat  fail.m42mat  iris.m42mat  leather.m42mat  material.001.m42mat  material.m42mat  skin.m42mat  whitecloth.m42mat
resources/models/: monkey.m42  nyancat.m42  nyancube.m42  pirate.m42  test.m42  texture-pirate.m42  untitled.m42
resources/models/test/: test.m42
resources/player/: default.frag
resources/raw/: nyancube.blend
resources/raw/models/: nyancube.blend  nyancube.blend1  pirate.blend  texture-pirate.blend
resources/shaders/: color.frag  colorNoLight.frag  default.frag  default.vert  defaultNoLight.vert  texture.frag
resources/textures/: maptex.dds  scratched_leather.dds  troll.dds  troll.dds.dds
src/: errorhandler.hpp  main.cpp
src/constants/: inputconstants.hpp
src/core/: GameEntity.cpp  GameEntity.hpp  InputListener.hpp  InputManager.cpp  InputManager.hpp  definitions.hpp  entity.h  gameentity.cpp  gameentity.hpp  inputevent.cpp  inputevent.hpp  inputlistener.hpp  inputmanager.cpp  inputmanager.hpp  inputmapper.cpp  inputmapper.hpp  level.cpp  level.hpp  resourcecache.hpp  resourcemanager.cpp  resourcemanager.hpp
src/core/resources/: level.cpp  level.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  staticobject.cpp  staticobject.hpp  terrain.cpp  terrain.hpp  texture.cpp  texture.hpp  unit.cpp  unit.hpp
src/core/resources/exceptions/: invalidresourceerror.hpp
src/events/: GameEvent.cpp  GameEvent.hpp  gameevent.cpp  gameevent.hpp
src/graphics/: RenderedEntity.cpp  RenderedEntity.hpp  camera.cpp  camera.hpp  glutils.hpp  graphics-definitions.hpp  guiinputlistener.cpp  guiinputlistener.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  oglrenderer.cpp  oglrenderer.hpp  renderedentity.cpp  renderedentity.hpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shadermanager.cpp  shadermanager.hpp  shaderprogram.cpp  shaderprogram.hpp  window.hpp
src/graphics/cameras/: freemovementcam.cpp  freemovementcam.hpp  noopcamera.cpp  noopcamera.hpp
src/graphics/exceptions/: oglerror.cpp  oglerror.hpp
src/graphics/resources/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  terrain.cpp  terrain.hpp
src/state/: GameState.hpp  GameStateEngine.cpp  GameStateEngine.hpp  gamestate.hpp  gamestateengine.cpp  gamestateengine.hpp
src/state/core_states/: gamestateactive.cpp  gamestateactive.hpp
src/states/: state.h
src/utils/: FPSManager.cpp  FPSManager.hpp  UIDGenerator.cpp  UIDGenerator.h  UIDGenerator.hpp  config.h  config.h.in  consoleloggingadapter.cpp  consoleloggingadapter.hpp  definitions.cpp  definitions.hpp  fpsmanager.cpp  fpsmanager.hpp  logger.cpp  logger.hpp  loggingadapter.cpp  loggingadapter.hpp  tgaloader.cpp  tgaloader.hpp  uidgenerator.cpp  uidgenerator.hpp
